baz: Java 20 preview