@@ -15,4 +15,10 @@ task myJar(type: Jar, group: 'build') {
 
 java {
     withJavadocJar()
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(20))
+    }
+}
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.addAll(["-Xlint:preview", "--enable-preview"])
 }
